<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_light"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/main_layout_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout_inside_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/editText_businessName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/businessName"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_businessAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/businessAddress"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_businessName" />

            <Spinner
                android:id="@+id/spinner_businessType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_businessType" />

            <RadioGroup
                android:id="@+id/radioGroup_scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_rating"
                app:layout_constraintStart_toEndOf="@+id/checkBox_rating"
                app:layout_constraintTop_toTopOf="@+id/checkBox_rating">

                <RadioButton
                    android:id="@+id/radioButton_fhrs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/fhrs"
                    android:textSize="@dimen/text_subheading" />

                <RadioButton
                    android:id="@+id/radioButton_fhis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/fhis"
                    android:textSize="@dimen/text_subheading" />
            </RadioGroup>

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_rating" />

            <Spinner
                android:id="@+id/spinner_fhisRating"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/fhisRating"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <Spinner
                android:id="@+id/spinner_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideLine_x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_region" />

            <TextView
                android:id="@+id/textView_authority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/localAuthority"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/spinner_authority"
                app:layout_constraintStart_toStartOf="@+id/spinner_authority" />

            <Spinner
                android:id="@+id/spinner_authority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_region"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideLine_x"
                app:layout_constraintTop_toTopOf="@+id/spinner_region" />

            <SeekBar
                android:id="@+id/seekBar_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:max="29"
                app:layout_constraintEnd_toStartOf="@+id/textView_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_requiresLocation" />

            <TextView
                android:id="@+id/textView_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/number_one"
                app:layout_constraintBottom_toBottomOf="@+id/seekBar_radius"
                app:layout_constraintEnd_toStartOf="@+id/textView_miles"
                app:layout_constraintTop_toTopOf="@+id/seekBar_radius" />

            <CheckBox
                android:id="@+id/checkBox_businessType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:text="@string/businessType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_advancedOption" />

            <CheckBox
                android:id="@+id/checkBox_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_businessType" />

            <CheckBox
                android:id="@+id/checkBox_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/region"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_fhisRating" />

            <CheckBox
                android:id="@+id/checkBox_searchRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/searchRadius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_region" />

            <Button
                android:id="@+id/button_searchNearMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_my_location_white_24dp"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/searchNearMe"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_search"
                app:layout_constraintTop_toBottomOf="@+id/textView_radius" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_searchNearMe"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_radius" />

            <Button
                android:id="@+id/button_advancedSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/transparent"
                android:minHeight="0dp"
                android:text="@string/advancedSearch"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/text_small_subheading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_businessAddress" />

            <android.support.constraint.Group
                android:id="@+id/group_advancedSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="textView_radius,seekBar_radius,spinner_region,spinner_businessType,checkBox_businessType,checkBox_region,checkBox_rating,checkBox_searchRadius,separator_x,textView_requiresLocation,radioGroup_scheme,textView_advancedOption,textView_miles" />

            <android.support.constraint.Guideline
                android:id="@+id/guideLine_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/separator_x"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/color_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_advancedSearch" />

            <TextView
                android:id="@+id/textView_requiresLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/requires_location"
                android:textSize="@dimen/text_small_subheading"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox_searchRadius"
                app:layout_constraintStart_toStartOf="@+id/guideLine_x"
                app:layout_constraintTop_toTopOf="@+id/checkBox_searchRadius" />

            <Spinner
                android:id="@+id/spinner_ratingOperator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/ratingOperators"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/textView_miles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/miles"
                app:layout_constraintBottom_toBottomOf="@+id/textView_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_radius" />

            <TextView
                android:id="@+id/textView_advancedOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/advancedOptions"
                android:textAllCaps="true"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_x" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>