<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Mohammad Halan - Portfolio Assignment
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_accent"
    android:padding="@dimen/app_content_space">

    <TextView
        android:id="@+id/textView_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/textView_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_subheading"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView_dateRange"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_row_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/textView_type"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small_subheading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_row_name" />

    <TextView
        android:id="@+id/textView_distance"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:gravity="center"
        android:text="@string/zero_miles"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small_subheading"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_distance"
        app:layout_constraintStart_toEndOf="@+id/imageView_distance"
        app:layout_constraintTop_toTopOf="@+id/imageView_distance" />

    <TextView
        android:id="@+id/textView_row_rating"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_star_rate_white"
        app:layout_constraintStart_toEndOf="@+id/imageView_star_rate_white"
        app:layout_constraintTop_toTopOf="@+id/imageView_star_rate_white" />

    <ImageView
        android:id="@+id/imageView_star_rate_white"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_star_rate_white_18dp"
        android:contentDescription="TODO" android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_row_type" />

    <ImageView
        android:id="@+id/imageView_distance"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/distance_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_star_rate_white" android:contentDescription="TODO"  />

    <ImageView
        android:id="@+id/imageView_row_favourite"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/star_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:contentDescription="TODO"  />

    <ImageView
        android:id="@+id/imageView_dateRange"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_date_range_white_36dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_row_rating"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toEndOf="@+id/textView_row_rating"
        app:layout_constraintTop_toTopOf="@+id/textView_row_rating" android:contentDescription="TODO"  />

    <TextView
        android:id="@+id/row_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:gravity="center"
        android:text="@string/textView_date"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small_subheading"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_dateRange"
        app:layout_constraintStart_toEndOf="@+id/imageView_dateRange"
        app:layout_constraintTop_toTopOf="@+id/imageView_dateRange" />

    <android.support.constraint.Group
        android:id="@+id/distance_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageView_distance,textView_distance"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

</android.support.constraint.ConstraintLayout>